# Karmie

./: .cursorrules  .gitignore  LICENSE  README.md  docker-compose.yml  fix_permissions.sh  force_clean.sh  how main:juno.config.ts  juno.config.ts  juno.dev.config.json  juno.dev.config.ts  juno_dev.sh  npm_dev.sh  package-lock.json  package.json  setup_environment.sh  svelte.config.js  tailwind.config.js  wasm-info.txt
.cursor/rules/: debug-code.mdc  default.mdc  git-commit-push-version.mdc  git-commit.mdc  rules.mdc
.github/workflows/: deploy.yaml
docs/: README.md
docs/core/: database_collections_juno.md  development.md  ic_and_juno_api_reference.md  resources.md  (+1 more)
src/: app.css  app.d.ts  app.html
src/satellite/: Cargo.toml  satellite_extension.did
src/satellite/src/: lib.rs
src/satellite/src/assert_set_doc/: assert_doc_reputation.rs  assert_doc_tag.rs  assert_doc_user.rs  assert_doc_vote.rs  mod.rs
src/satellite/src/core/: mod.rs  reputation_calculations.rs  tag_calculations.rs
src/satellite/src/processors/: document_keys.rs  document_queries.rs  graph_processors.rs  mod.rs  ulid_generator.rs  ulid_timestamp_extract.rs  ulid_type.rs  username_availability.rs
src/satellite/src/utils/: description_helpers.rs  id_generator.rs  logger.rs  logging.rs  mod.rs  normalize.rs  query_helpers.rs  reputation_calculations.rs  structs.rs  tag_calculations.rs  time.rs  validation.rs
src/satellite/src/validation/: description.rs  display_name.rs  mod.rs  tag_validate_time_periods.rs  ulid_timestamp_validate.rs  username.rs  validate_handle.rs  validate_tag_date.rs
(+253 files in other folders)
