[package]
name = "satellite"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.114"
junobuild-shared = "0.0.24"
junobuild-satellite = { version = "0.0.22", default-features = false, features = ["on_set_doc", "assert_set_doc"] }
junobuild-macros = { version = "0.0.4" }
junobuild-utils = "0.0.4"
getrandom = { version = "0.2.3", features = ["js"] }
chrono = "0.4"

[dev-dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.114"

