[package]
name = "satellite"
version = "0.0.11"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde_cbor = { version = "0.11.2", default-features = false }
junobuild-satellite = "0.0.22"
junobuild-macros = "0.0.4"
junobuild-utils = "0.0.4"
junobuild-shared = "0.0.24"
serde_json = { version = "1.0.114", default-features = false, features = ["alloc"] }
lazy_static = "1.5.0"
regex = { version = "1.11.1", default-features = false, features = ["unicode-perl"] }
hex = { version = "0.4.3", default-features = false }
ulid = { version = "1.2.1", default-features = false }